--- a/src/app/components/shared/camera/camera.component.html
+++ b/src/app/components/shared/camera/camera.component.html
@@ -1,1 +1,3 @@
-<p>camera works!</p>
+<video #videoElement autoplay style="aspect-ratio: 16/9; width: 300px; " > </video>
+<button (click)="startWebcam()">Iniciar cámara</button>
+<button (click)="stopWebcam()">Detener cámara</button>
