--- a/src/app/components/shared/camera/camera.component.html
+++ b/src/app/components/shared/camera/camera.component.html
@@ -1,3 +1,18 @@
-<video #videoElement autoplay style="aspect-ratio: 16/9; width: 300px; " > </video>
-<button (click)="startWebcam()">Iniciar cámara</button>
-<button (click)="stopWebcam()">Detener cámara</button>
+<div>
+    <div class="container">
+        <canvas class="img img-fluid canvas-container" width="1920" height="1080" #videoCanvas  style="border: 1px solid black;"></canvas>
+        <video class="img img-fluid position-fixed camera-container" #videoElement autoplay width="100" height="56.2"></video>
+    </div>
+    <div>
+      <button class="btn btn-success" (click)="startWebcam()">Iniciar cámara</button>
+      <button class="btn btn-danger" (click)="stopWebcam()">Detener cámara</button>
+      <button (click)="listMediaDevices()">Listar dispositivos de medios</button>
+    </div>
+  
+
+    <ul>
+      <li *ngFor="let device of mediaDevices">
+        {{ device.kind }}: {{ device.label }}
+      </li>
+    </ul>
+  </div>
