--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.canvas-container{
+    background-color: #f0f0f0;
+    width: 100%;
+    max-width: 100%;
+    aspect-ratio: 16 / 9;
+    min-width: 300px;
+    height: auto;
+}
+
+.camera-container{
+    z-index: 100;
+    bottom: 0;
+    display: none;
+}
