--- a/src/app/components/shared/camera/camera.component.html
+++ b/src/app/components/shared/camera/camera.component.html
@@ -1,6 +1,6 @@
-<div>
-    <div class="container">
-        <canvas class="img img-fluid canvas-container" width="1920" height="1080" #videoCanvas  style="border: 1px solid black;"></canvas>
+<div class="bg-dark">
+    <div class="container bg-dark px-5 mx-auto">
+        <canvas class="img canvas-container" width="1920" height="1080" #videoCanvas  style="border: 1px solid black;"></canvas>
         <video class="img img-fluid position-fixed camera-container" #videoElement autoplay width="100" height="56.2"></video>
     </div>
     <div>
